tests/snapshots/help_snapshots__noun_help@email.snap
---
source: tests/help_snapshots.rs
expression: out
---
Email address normalization and validation

Usage: ubertool email [OPTIONS] <COMMAND>

Commands:
  normalize  Normalize and validate an email address
  help       Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
