tests/snapshots/help_snapshots__noun_help@eta.snap
---
source: tests/help_snapshots.rs
expression: out
---
ETA calculator from progress (done / total / elapsed)

Usage: ubertool eta [OPTIONS] <COMMAND>

Commands:
  calc  Calculate ETA from progress (done/total/elapsed)
  help  Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
