tests/snapshots/help_snapshots__noun_help@git.snap
---
source: tests/help_snapshots.rs
expression: out
---
Git cheat sheet memo (bundled Markdown reference)

Usage: ubertool git [OPTIONS] <COMMAND>

Commands:
  memo  Print the bundled git cheat sheet (Markdown)
  help  Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
