tests/snapshots/help_snapshots__noun_help@hash.snap
---
source: tests/help_snapshots.rs
expression: out
---
Cryptographic hash functions (md5, sha1, sha224, sha256, sha384, sha512, sha3-256, sha3-512)

Usage: ubertool hash [OPTIONS] <COMMAND>

Commands:
  md5       Compute MD5 hash (legacy / not collision-resistant).
            
            Examples:
              ubertool hash md5 "hello"
              ubertool hash md5 --in ./file.bin
              ubertool hash md5 "hello" --json
              echo -n hello | ubertool hash md5
              printf 'alice\nbob\n' | ubertool hash md5 --batch
  sha1      Compute SHA-1 hash (legacy / not collision-resistant).
            
            Examples:
              ubertool hash sha1 "hello"
              ubertool hash sha1 --in ./file.bin
              ubertool hash sha1 "hello" --json
              printf 'alice\nbob\n' | ubertool hash sha1 --batch
  sha224    Compute SHA-224 hash.
            
            Examples:
              ubertool hash sha224 "hello"
              ubertool hash sha224 --in ./file.bin --json
              printf 'alice\nbob\n' | ubertool hash sha224 --batch
  sha256    Compute SHA-256 hash.
            
            Examples:
              ubertool hash sha256 "hello"
              ubertool hash sha256 --in ./file.bin --json
              printf 'alice\nbob\n' | ubertool hash sha256 --batch
  sha384    Compute SHA-384 hash.
            
            Examples:
              ubertool hash sha384 "hello"
              ubertool hash sha384 --in ./file.bin --json
              printf 'alice\nbob\n' | ubertool hash sha384 --batch
  sha512    Compute SHA-512 hash.
            
            Examples:
              ubertool hash sha512 "hello"
              ubertool hash sha512 --in ./file.bin --json
              printf 'alice\nbob\n' | ubertool hash sha512 --batch
  sha3-256  Compute SHA3-256 hash (Keccak).
            
            Examples:
              ubertool hash sha3-256 "hello"
              ubertool hash sha3-256 --in ./file.bin --json
              printf 'alice\nbob\n' | ubertool hash sha3-256 --batch
  sha3-512  Compute SHA3-512 hash (Keccak).
            
            Examples:
              ubertool hash sha3-512 "hello"
              ubertool hash sha3-512 --in ./file.bin --json
              printf 'alice\nbob\n' | ubertool hash sha3-512 --batch
  help      Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
