tests/snapshots/help_snapshots__noun_help@hmac.snap
---
source: tests/help_snapshots.rs
expression: out
---
Keyed-hash MAC (md5/sha1/sha224/sha256/sha384/sha512/sha3-256/sha3-512)

Usage: ubertool hmac [OPTIONS] <COMMAND>

Commands:
  md5       Compute HMAC-MD5 (legacy / not collision-resistant).
            
            Examples:
              ubertool hmac md5 "msg" --key "secret"
  sha1      Compute HMAC-SHA1 (legacy).
  sha224    Compute HMAC-SHA224.
  sha256    Compute HMAC-SHA256.
            
            Examples:
              ubertool hmac sha256 "msg" --key "secret"
              ubertool hmac sha256 --in ./file --key "secret" --json
  sha384    Compute HMAC-SHA384.
  sha512    Compute HMAC-SHA512.
  sha3-256  Compute HMAC-SHA3-256.
  sha3-512  Compute HMAC-SHA3-512.
  help      Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
