tests/snapshots/help_snapshots__noun_help@html.snap
---
source: tests/help_snapshots.rs
expression: out
---
HTML entity encoding and decoding

Usage: ubertool html [OPTIONS] <COMMAND>

Commands:
  encode  Encode HTML-special characters into entities
  decode  Decode HTML entities back to characters
  help    Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
