tests/snapshots/help_snapshots__noun_help@iban.snap
---
source: tests/help_snapshots.rs
expression: out
---
IBAN validation (mod-97 check digits)

Usage: ubertool iban [OPTIONS] <COMMAND>

Commands:
  validate  Validate an IBAN check digit (mod-97)
  help      Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
