tests/snapshots/help_snapshots__noun_help@integer-base.snap
---
source: tests/help_snapshots.rs
expression: out
---
Integer base conversion (bases 2-36)

Usage: ubertool integer-base [OPTIONS] <COMMAND>

Commands:
  convert  Convert an integer between bases (2-36)
  help     Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
