tests/snapshots/help_snapshots__noun_help@ipv6-ula.snap
---
source: tests/help_snapshots.rs
expression: out
---
RFC4193 Unique Local IPv6 prefix generator

Usage: ubertool ipv6-ula [OPTIONS] <COMMAND>

Commands:
  new   Generate a random IPv6 ULA /48 prefix
  help  Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
